--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav ul li a {
 }
 
 .categorie {
-    background-color: white;
+    background-color: black;
     margin: 20px auto;
     padding: 15px;
     border-radius: 10px;
